--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
 _notes/
 admin/backup/
-barcode.php
 file/
-/.buildpath
-/.project
-
-/.settings/
-
-.buildpath
-.project
-.settings/
 
 bncms/inc/configuration/database-settings.inc.php
 bncms/inc/configuration/backend-config.inc.php
 bncms/inc/configuration/frontend-config.inc.php
+
+
+.settings/
+.idea/
+
+.buildpath
+.project
